# FinanceManager

./: .gitattributes  .gitignore  Cargo.toml  FinanceManager.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: README.md  settings.local.json
.claude/agents/: critical-thinker.md  devops-cost-optimizer.md  five-lens-planner.md  infra-scaling-expert.md  planner.md  security-architect.md  tdd-senior-dev.md
.claude/commands/: five-lens.md  plan.md
.claude/skills/: master-skills.md
.github/workflows/: ci.yml
crates/fm-audit/: Cargo.toml
crates/fm-audit/src/: appender.rs  entry.rs  error.rs  lib.rs
crates/fm-audit/tests/: chain.rs
crates/fm-categorize/: Cargo.toml
crates/fm-categorize/src/: builtin.rs  engine.rs  lib.rs  merchant.rs  rule.rs  stored.rs
crates/fm-categorize/tests/: rules.rs
crates/fm-core/: Cargo.toml
crates/fm-core/src/: amount.rs  ids.rs  lib.rs
crates/fm-crypto/: Cargo.toml
crates/fm-crypto/src/: envelope.rs  error.rs  kdf.rs  key.rs  keystore.rs  lib.rs  recovery.rs  wrap.rs
crates/fm-parser/: Cargo.toml
crates/fm-parser/src/: adapter.rs  extracted.rs  lib.rs  raw_txn.rs  registry.rs
crates/fm-parser/src/adapters/: hdfc_cc.rs  hdfc_savings.rs  mod.rs  sbi_savings.rs
crates/fm-parser/tests/: hdfc_cc_canned.rs  hdfc_savings_canned.rs  sbi_savings_canned.rs
crates/fm-pdf/: Cargo.toml
crates/fm-pdf/src/: error.rs  extractor.rs  hash.rs  lib.rs
crates/fm-pdf/tests/: real_pdf.rs
crates/fm-profile/: Cargo.toml
crates/fm-profile/src/: bootstrap.rs  error.rs  lib.rs  profile.rs  session.rs
crates/fm-profile/tests/: lifecycle.rs
crates/fm-storage/: Cargo.toml
crates/fm-storage/src/: atomic.rs  error.rs  json.rs  lib.rs  path.rs  repository.rs
crates/fm-storage/tests/: path_traversal.rs  repository.rs
docs/design/: local-data-schema.md  ui-wireframe-spec.md
scripts/: build.ps1  dev-env.ps1  dev.ps1
secrets/: README.md
spikes/pdf-parse/: Cargo.toml  README.md  report.md
spikes/pdf-parse/fixtures/: README.md
spikes/pdf-parse/src/: lib.rs
src/: App.css  App.tsx  categories.ts  ipc.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audit.rs  commands.rs  dashboard.rs  export.rs  investments.rs  lib.rs  llm.rs  llm_config.rs  loans.rs  main.rs  merchant_cache.rs  state.rs  upload.rs  user_rules.rs
src/components/: CategoryDrillModal.tsx  DashboardView.tsx  Home.tsx  InvestmentsView.tsx  LoansView.tsx  MonthDrillModal.tsx  PastAnalysisView.tsx  ProfileCreate.tsx  ProfilePicker.tsx  ProfileUnlock.tsx  RecategorizeModal.tsx  UploadView.tsx
