[workspace]
resolver = "2"
members = [
    "crates/fm-core",
    "crates/fm-storage",
    "crates/fm-crypto",
    "crates/fm-audit",
    "crates/fm-parser",
]
exclude = [
    "spikes/pdf-parse",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.95"
license = "UNLICENSED"
authors = ["Jai Parekh"]
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
