[package]
name = "fm-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "FinanceManager — append-only hash-chained audit log."

[dependencies]
fm-core = { path = "../fm-core" }
