[package]
name = "fm-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "FinanceManager — append-only hash-chained audit log."

[dependencies]
fm-core = { path = "../fm-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tempfile = { workspace = true }
