[package]
name = "fm-categorize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "FinanceManager — categorization rule engine + built-in rules for Indian banking patterns."

[dependencies]
serde = { workspace = true }
regex = "1"

[dev-dependencies]
serde_json = { workspace = true }
