[package]
name = "fm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "FinanceManager — shared domain types (UserId, errors). Pure types, no I/O."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rust_decimal_macros = "1"
