[package]
name = "fm-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "FinanceManager — AES-256-GCM file envelope, Argon2id KDF, OS-keystore wrapper."

[dependencies]
fm-core = { path = "../fm-core" }
