[package]
name = "fm-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "FinanceManager — AES-256-GCM envelope, Argon2id KDF, OS-keystore wrapper."

[dependencies]
fm-core = { path = "../fm-core" }
thiserror = { workspace = true }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
keyring = { version = "3", default-features = false, features = ["windows-native", "apple-native", "linux-native"] }
