[package]
name = "fm-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "FinanceManager — BankAdapter trait and the normalization pipeline (text → normalized rows)."

[dependencies]
fm-core = { path = "../fm-core" }
