[package]
name = "fm-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "FinanceManager — BankAdapter trait + first per-issuer parsers."

[dependencies]
fm-core = { path = "../fm-core" }
serde = { workspace = true }
thiserror = { workspace = true }
regex = "1"
