[package]
name = "fm-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "FinanceManager — PDF text extraction (pdfium-render wrapper) producing ExtractedPdf for fm-parser."

[dependencies]
fm-parser = { path = "../fm-parser" }
thiserror = { workspace = true }
sha2 = { workspace = true }
pdfium-render = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
